# GoogleCal

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
googlecal/: __init__.py  calendar_client.py  config.py  schedule.py
input/: schecule.example.yaml
